--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,19 +1,22 @@
 default_install_hook_types: [pre-commit, prepare-commit-msg]
 ci:
-  autofix_commit_msg: "🚨 `pre-commit-ci`修复格式错误"
-  skip:
-    - "poetry-lock"
+  autofix_commit_msg: ':rotating_light: auto fix by pre-commit hooks'
   autofix_prs: true
-  autoupdate_branch: v4
+  autoupdate_branch: main
   autoupdate_schedule: monthly
-  autoupdate_commit_msg: "⬆️ `pre-commit-ci`自动升级"
+  autoupdate_commit_msg: ':arrow_up: auto update by pre-commit hooks'
+
 repos:
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.0.276
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
-        stages: [commit]
+
+  - repo: https://github.com/RobertCraigie/pyright-python
+    rev: v1.1.318
+    hooks:
+      - id: pyright
 
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
@@ -26,13 +29,3 @@ repos:
     hooks:
       - id: black
         stages: [commit]
-
-  - repo: https://github.com/python-poetry/poetry
-    rev: 1.5.1
-    hooks:
-      - id: poetry-check
-      - id: poetry-lock
-      - id: poetry-export
-        args: ["-f", "requirements.txt", "-o", "requirements.txt"]
-        pass_filenames: false
-        verbose: true
