--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,39 +27,18 @@ classifiers = [
 readme = "README.md"
 license = { text = "MIT" }
 
-[tool.poetry]
-name = "nonebot-plugin-pjsk"
-version = "0.2.1"
-description = "Project Sekai Sticker Creator for NoneBot2."
-authors = ["Agnes_Digital <Z735803792@163.com>","student_2333 <lgc2333@126.com>"]
-license = "MIT"
-readme = "README.md"
-homepage = "https://github.com/Agnes4m/nonebot_plugin_pjsk"
-repository = "https://github.com/Agnes4m/nonebot_plugin_pjsk"
-keywords = ["pjsk", "nonebot2", "plugin"]
-classifiers = [
-    "License :: OSI Approved :: MIT License",
-    "Programming Language :: Python",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Operating System :: OS Independent",
-]
-include = [
-    "LICENSE","README.md"
-]
-
 [project.urls]
 homepage = "https://github.com/Agnes4m/nonebot_plugin_pjsk"
 
-[tool.poetry.dependencies]
-python = "^3.8"
-nonebot2 = "^2.0.0"
-nonebot-adapter-onebot = "^2.2.0"
-nonebot-plugin-send-anything-anywhere = "^0.2.7"
-imagetext-py = "^1.0.2"
-pil-utils = "^0.1.7"
+[tool.pdm.build]
+includes = []
+
+[build-system]
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
+
+[tool.pyright]
+pythonVersion = "3.8"
 
 [tool.black]
 line-length = 89
@@ -74,28 +53,3 @@ length_sort = true
 skip_gitignore = true
 force_sort_within_sections = true
 extra_standard_library = ["typing_extensions"]
-
-[tool.poetry.urls]
-"Bug Tracker" = "https://github.com/Agnes4m/nonebot_plugin_pjsk/issues"
-
-[[tool.poetry.source]]
-name = 'aliyun'
-url = 'https://mirrors.aliyun.com/pypi/simple/'
-priority = "default"
-
-[tool.poetry.scripts]
-check = "pre-commit run --all-files"
-
-[tool.poetry.group.dev.dependencies]
-black = "^23.1.0"
-isort = "^5.12.0"
-pre-commit = "^2.21.0"
-pycln = "^2.1.2"
-ruff = "^0.0.276"
-
-[tool.pdm.build]
-includes = []
-
-[build-system]
-requires = ["pdm-backend"]
-build-backend = "pdm.backend"
