--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,10 +46,5 @@ target-version = ["py39", "py310", "py311"]
 include = '\.pyi?$'
 skip-string-normalization = true
 
-[tool.isort]
-profile = "black"
-line_length = 89
-length_sort = true
-skip_gitignore = true
-force_sort_within_sections = true
-extra_standard_library = ["typing_extensions"]
+[tool.ruff]
+extend-select = ["I"]
