--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ include = '\.pyi?$'
 skip-string-normalization = true
 
 [tool.ruff]
+ignore = ["E501"]
 extend-select = ["I"]
 
 [tool.ruff.isort]
