--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "nonebot-plugin-pjsk"
-version = "0.2.1"
+version = "0.2.2"
 description = "Project Sekai Sticker Creator for NoneBot2."
 authors = [
     { name = "Agnes_Digital", email = "Z735803792@163.com" },
@@ -44,11 +44,51 @@ pythonVersion = "3.8"
 line-length = 89
 target-version = ["py39", "py310", "py311"]
 include = '\.pyi?$'
-skip-string-normalization = true
-
-[tool.ruff]
-ignore = ["E501"]
-extend-select = ["I"]
+# skip-string-normalization = true
 
 [tool.ruff.isort]
 extra-standard-library = ["typing_extensions"]
+
+[tool.ruff]
+ignore = [
+    "B008",
+    "B905",
+    "E501",
+    "FBT002",
+    "PGH003",
+    "RUF001",
+    "RUF002",
+    "RUF003",
+    "RUF006",
+    "RUF100",
+    "SIM117",
+    "TRY002",
+    "TRY003",
+]
+select = [
+    "A",
+    "ARG",
+    "ASYNC",
+    "B",
+    "C4",
+    "COM",
+    "E",
+    "F",
+    "FBT",
+    "FLY",
+    "I",
+    "ISC",
+    "N",
+    "PIE",
+    "PGH",
+    "PTH",
+    "PYI",
+    "Q",
+    "RET",
+    "RSE",
+    "RUF",
+    "SIM",
+    "SLF",
+    "SLOT",
+    "TRY",
+]
