--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,14 @@ authors = [
 ]
 dependencies = [
     "nonebot2>=2.0.0",
-    "nonebot-adapter-onebot>=2.2.0",
     "nonebot-plugin-send-anything-anywhere>=0.2.7",
     "imagetext-py>=2.1.3",
     "pil-utils>=0.1.7",
+    "httpx>=0.24.1",
+    "numpy>=1.25.1",
+    "anyio>=3.7.1",
 ]
-requires-python = ">=3.8,<4.0"
+requires-python = ">=3.9,<4.0"
 keywords = ["pjsk", "nonebot2", "plugin"]
 classifiers = [
     "License :: OSI Approved :: MIT License",
