--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "nonebot2>=2.0.0",
     "nonebot-plugin-send-anything-anywhere>=0.2.7",
     "imagetext-py>=2.1.3",
-    "httpx>=0.24.1",
+    "aiohttp>=3.8.5",
     "numpy>=1.25.1",
     "anyio>=3.7.1",
 ]
