--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "nonebot-plugin-pjsk"
-version = "0.2.8"
+version = "0.2.9"
 description = "Project Sekai Sticker Creator for NoneBot2."
 authors = [
     { name = "Agnes_Digital", email = "Z735803792@163.com" },
@@ -9,12 +9,11 @@ authors = [
 dependencies = [
     "nonebot2>=2.0.0",
     "nonebot-plugin-send-anything-anywhere>=0.2.7",
+    "pillow>=9,<10",
     "imagetext-py>=2.1.3",
     "aiohttp>=3.8.5",
     "numpy>=1.25.1",
     "anyio>=3.7.1",
-    "pillow>=9.0.0",
-    "pillow<10.0.0",
 ]
 requires-python = ">=3.9,<4.0"
 keywords = ["pjsk", "nonebot2", "plugin"]
