--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "nonebot-plugin-pjsk"
-version = "0.2.9.post3"
+version = "0.2.10"
 description = "Project Sekai Sticker Creator for NoneBot2."
 authors = [
     { name = "Agnes_Digital", email = "Z735803792@163.com" },
@@ -10,12 +10,13 @@ dependencies = [
     "nonebot2>=2.1.1",
     "nonebot-plugin-send-anything-anywhere>=0.3.2",
     "pillow>=9,<10",
+    "pil-utils>=0.1.8",
     "imagetext-py>=2.1.3",
-    "aiohttp>=3.8.5",
+    "httpx>=0.25.1",
     "numpy>=1.25.1",
     "anyio>=3.7.1",
 ]
-requires-python = ">=3.9,<4.0"
+requires-python = ">=3.9,<=3.12"
 keywords = ["pjsk", "nonebot2", "plugin"]
 classifiers = [
     "License :: OSI Approved :: MIT License",
