--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,12 @@ authors = [
 ]
 dependencies = [
     "nonebot2>=2.1.1",
-    "nonebot-plugin-send-anything-anywhere>=0.3.2",
-    "pillow>=9,<10",
-    "pil-utils>=0.1.8",
-    "imagetext-py>=2.1.3",
     "httpx>=0.25.1",
-    "numpy>=1.25.1",
     "anyio>=3.7.1",
+    "nonebot-plugin-alconna>=0.36.1",
+    "nonebot-plugin-htmlrender>=0.2.3",
+    "jinja2>=3.1.3",
+    "yarl>=1.9.4",
 ]
 requires-python = ">=3.9,<=3.12"
 keywords = ["pjsk", "nonebot2", "plugin"]
