--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "nonebot2>=2.2.0",
     "httpx>=0.25.1",
     "anyio>=3.6.2",
-    "nonebot-plugin-alconna>=0.36.1",
+    "nonebot-plugin-alconna>=0.40.0rc1",
     "nonebot-plugin-htmlrender>=0.2.3",
     "jinja2>=3.1.3",
     "yarl>=1.9.4",
