--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,4 @@
-custom: ['https://afdian.net/a/agnes_digital', 'https://afdian.net/@lgc2333/']
+custom:
+  - https://afdian.net/a/agnes_digital
+  - https://afdian.net/a/lgc2333/
+  - https://blog.lgc2333.top/donate
